# InstaCurator

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  core.py  crud.py  models.py  routes.py
app/templates/: terms-and-conditions.html
core/: core.py
migrations/versions/: 438905780a27_initial_migration.py  79cbd221a591_reinitial_migration.py  917d81df3247_reinitial_migration.py  bcc367243c53_reinitation.py
templates/: privacy-policy.html
